--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>adrielowski</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../vendor/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/vendor/css/bootstrap.min.css">
 </head>
 <body class="body">
      <header class="bg-secondary text-white text-center p-4 mb-4">
@@ -73,7 +73,6 @@
             <p class="mt-3 mb-0">© 2025 Adrielowski. Todos los derechos reservados.</p>
         </div>
     </footer>
-    
-    <script src="/vendor/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
