--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <p class="fs-5">En lugar de rendirme por falta de recursos, decidí trabajar y emprender con algo útil y positivo.</p>
                 </div>
                 <div class="col-md-6 text-center">
-                    <img src="/assets/img/logo.jfif" alt="..." class="img-fluid rounded shadow-sm">
+                    <img src="../assets/img/logo.jfif" alt="..." class="img-fluid rounded shadow-sm">
                 </div>
             </div>
         </section>
@@ -32,7 +32,7 @@
             <div class="row">
                 <div class="col-md-4 text-center">
                     <div class="product-image-container mb-3">
-                        <img src="/assets/img/rascador.jpg" alt="Productos gatunos" class="img-fluid rounded shadow-sm">
+                        <img src="../assets/img/rascador.jpg" alt="Productos gatunos" class="img-fluid rounded shadow-sm">
                     </div>
                     <h3>rascadores</h3>
                     <p>Encuentra productos para tus animales que harán tu vida más fácil.</p>
@@ -46,7 +46,7 @@
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="product-image-container mb-3">
-                        <img src="/assets/img/rascador.jpeg" alt="..." class="img-fluid rounded shadow-sm">
+                        <img src="../assets/img/rascador.jpeg" alt="..." class="img-fluid rounded shadow-sm">
                     </div>
                     <h3>rascadores</h3>
                     <p>Encuentra productos para tus animales que harán tu vida más fácil.</p>
@@ -77,3 +77,4 @@
 </body>
 
 </html>
+
