--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <p class="fs-5">En lugar de rendirme por falta de recursos, decidí trabajar y emprender con algo útil y positivo.</p>
                 </div>
                 <div class="col-md-6 text-center">
-                    <img src="../img/logo.jfif" alt="..." class="img-fluid rounded shadow-sm">
+                    <img src="assets/img/logo.jfif" alt="..." class="img-fluid rounded shadow-sm">
                 </div>
             </div>
         </section>
@@ -77,5 +77,6 @@
 </body>
 
 </html>
+
 
 
