--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
             <div class="row">
                 <div class="col-md-4 text-center">
                     <div class="product-image-container mb-3">
-                        <img src="../img/rascador.jpg" alt="Productos gatunos" class="img-fluid rounded shadow-sm">
+                        <img src="assets/img/rascador.jpg" alt="Productos gatunos" class="img-fluid rounded shadow-sm">
                     </div>
                     <h3>rascadores</h3>
                     <p>Encuentra productos para tus animales que harán tu vida más fácil.</p>
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="product-image-container mb-3">
-                        <img src="../img/rascador.jpg" alt="..." class="img-fluid rounded shadow-sm">
+                        <img src="assets/img/rascador.jpg" alt="..." class="img-fluid rounded shadow-sm">
                     </div>
                     <h3>rascadores</h3>
                     <p>Encuentra productos para tus animales que harán tu vida más fácil.</p>
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="product-image-container mb-3">
-                        <img src="../img/rascador.jpeg" alt="..." class="img-fluid rounded shadow-sm">
+                        <img src="assets/img/rascador.jpeg" alt="..." class="img-fluid rounded shadow-sm">
                     </div>
                     <h3>rascadores</h3>
                     <p>Encuentra productos para tus animales que harán tu vida más fácil.</p>
@@ -77,6 +77,7 @@
 </body>
 
 </html>
+
 
 
 
