--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>adrielowski</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="vendor/css/bootstrap.min.css">
 </head>
 <body class="body">
@@ -77,6 +77,7 @@
 </body>
 
 </html>
+
 
 
 
