--- a/index.html
+++ b/index.html
@@ -28,25 +28,11 @@
         </section>
 
         <section class="mb-5">
-            <h2 class="text-center mb-4">Nuestros Productos</h2>
+            <h2 class="text-center mb-4">Nuestro Producto</h2>
             <div class="row">
                 <div class="col-md-4 text-center">
                     <div class="product-image-container mb-3">
                         <img src="assets/img/rascador_1.jfif" alt="Productos gatunos" class="img-fluid rounded shadow-sm">
-                    </div>
-                    <h3>rascadores</h3>
-                    <p>Encuentra productos para tus animales que harán tu vida más fácil.</p>
-                </div>
-                <div class="col-md-4 text-center">
-                    <div class="product-image-container mb-3">
-                        <img src="assets/img/rascador_1.jfif" alt="..." class="img-fluid rounded shadow-sm">
-                    </div>
-                    <h3>rascadores</h3>
-                    <p>Encuentra productos para tus animales que harán tu vida más fácil.</p>
-                </div>
-                <div class="col-md-4 text-center">
-                    <div class="product-image-container mb-3">
-                        <img src="assets/img/rascador_1.jfif" alt="..." class="img-fluid rounded shadow-sm">
                     </div>
                     <h3>rascadores</h3>
                     <p>Encuentra productos para tus animales que harán tu vida más fácil.</p>
@@ -76,6 +62,7 @@
 </body>
 
 </html>
+
 
 
 
